--- a/plugin.xml
+++ b/plugin.xml
@@ -22,6 +22,18 @@
         <param name="android-package" value="com.example.plugin.Hello"/>
       </feature>
     </config-file>
+    <config-file target="AndroidManifest.xml" parent="/*">
+        <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+        <receiver
+                android:name=".BootReceiver"
+                android:enabled="true"
+                android:permission="android.permission.RECEIVE_BOOT_COMPLETED" >
+        <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <category android:name="android.intent.category.DEFAULT" />
+        </intent-filter>
+        </receiver>
+    </config-file>
 
     <source-file src="src/android/Hello.java" target-dir="src/com/example/plugin/"/>
   </platform>
