--- a/plugin.xml
+++ b/plugin.xml
@@ -36,6 +36,8 @@
     </config-file>
 
     <source-file src="src/android/Hello.java" target-dir="src/com/example/plugin/"/>
+    <source-file src="src/android/BootReceiver.java" target-dir="src/com/example/plugin/"/>
+                    
   </platform>
 
   <platform name="ios">
