--- a/plugin.xml
+++ b/plugin.xml
@@ -24,17 +24,22 @@
     </config-file>
     <config-file target="AndroidManifest.xml" parent="/*">
         <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-        <receiver
+        
+    </config-file>
+          
+        <!-- application-level config-file block -->
+        <config-file target="AndroidManifest.xml" parent="./application">
+            <receiver
                 android:name="com.example.plugin.BootReceiver"
                 android:enabled="true"
                 android:permission="android.permission.RECEIVE_BOOT_COMPLETED" >
-        <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <category android:name="android.intent.category.DEFAULT" />
-        </intent-filter>
+                <intent-filter>
+                        <action android:name="android.intent.action.BOOT_COMPLETED" />
+                        <category android:name="android.intent.category.DEFAULT" />
+                </intent-filter>
         </receiver>
-    </config-file>
-
+        </config-file>
+          
     <source-file src="src/android/Hello.java" target-dir="src/com/example/plugin/"/>
     <source-file src="src/android/BootReceiver.java" target-dir="src/com/example/plugin/"/>
                     
